--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -51,13 +51,6 @@
 	font-weight: 500;
 	cursor: pointer;
 }
-/*.menu__item::before {
-    content: '○ ';
-}
-.menu__item:hover::before {
-    content: '⬤ ';
-	color: var(--link-bullet-gray__hover);
-}*/
 .menu__item::before {
     content: ':';
 	position: relative;
@@ -122,7 +115,7 @@
 	color: #EF835F;
 }
 .menu__item:nth-child(5)::before {
-	color: #7F58F4;
+	color: #8F6EF4;
 }
 
 .menu__handle {
@@ -218,5 +211,11 @@
 		right: -7px;
 		bottom: -20px;
 		z-index: -1;
+	}
+	.menu:not(.menu--open) {
+		pointer-events: none;
+	}
+	.menu__handle {
+		pointer-events: all;
 	}
 }
